# Sunshine-Webrtc-Google

./: .gitignore  CMakeLists.txt
Signalling/: app.js  package-lock.json  package.json  sdp.json
Signalling/public/: demo.js  index.html
WebRTCPlugin/: CMakeLists.txt  Context.cpp  Context.h  CreateSessionDescriptionObserver.cpp  CreateSessionDescriptionObserver.h  DataChannelObject.cpp  DataChannelObject.h  Logger.cpp  Logger.h  PeerConnectionObject.cpp  PeerConnectionObject.h  SetLocalDescriptionObserver.cpp  SetLocalDescriptionObserver.h  SetRemoteDescriptionObserver.cpp  SetRemoteDescriptionObserver.h  Size.h  UnityVideoDecoderFactory.cpp  UnityVideoDecoderFactory.h  UnityVideoEncoderFactory.cpp  UnityVideoEncoderFactory.h  UnityVideoTrackSource.cpp  UnityVideoTrackSource.h  VideoFrame.cpp  VideoFrame.h  VideoFrameAdapter.cpp  VideoFrameAdapter.h  WebRTCPlugin.h  main.cpp  pch.h
WebRTCPlugin/ScreenCapture/: sync.h  thread_safe.h  utility.h  video.cpp  video.h
WebRTCPlugin/ScreenCapture/platform/: common.h
WebRTCPlugin/ScreenCapture/platform/windows/: display.h  display_base.cpp
WebRTCPlugin/Signalling/: WSClient.cpp  WSClient.h
cmake/: FindWebRTC.cmake
